fix: increase menu z-index

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,6 +1,5 @@
-// leaflet is around z-index 400
-$rmd-dialog-z-index: 1000;
-$rmd-menu-z-index: 1000;
+$rmd-dialog-z-index: 1000; // leaflet is around z-index 400
+$rmd-menu-z-index: 6000; // sidebar is z-index 5000
 
 @import "~@react-md/avatar/dist/mixins";
 @import "~@react-md/button/dist/mixins";
